sample-app/apps/example3/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-test
  namespace: nginx-test
  labels:
    app: nginx-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-test
  template:
    metadata:
      labels:
        app: nginx-test
    spec:
      containers:
        - name: nginx
          image: nginx:1.21.5
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            # name must match the volume name below
            - name: secret-1
              # In which dir to store the file. Dir must NOT exist
              mountPath: /etc/k8s-secret-nginx
      # The secret data is exposed to Containers in the Pod through a Volume.
      volumes:
        - name: secret-1
          secret:
            secretName: nginx-secret
